metadata-objects/extracted/unpackaged/objects/ShippingAddress__c.object
<CustomObject>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidato</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Direcciones_de_envio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Email de contacto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <label>Nombre del contacto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <label>Apellidos del contacto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Teléfono de contacto</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>País</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Móvil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Número/Aclarador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Código postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Calle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>Tipo Fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TaxRate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dirección de entrega</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las Direcciones de Envío</label>
    </listViews>
    <nameField>
        <displayFormat>DIR-{0}</displayFormat>
        <label>Cod Dirección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones de entrega</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>